All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The depot/hub for which this delivery rule is defined</description>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Location)</relationshipLabel>
    <relationshipName>ServiceMax_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>