All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Match_Account__c.field-meta.xml
<CustomField>
    <fullName>Match_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Match Account</label>
    <type>Checkbox</type>
</CustomField>