All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Match_Location__c.field-meta.xml
<CustomField>
    <fullName>Match_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Location</label>
    <type>Checkbox</type>
</CustomField>