All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Process with Record type Module</description>
    <inlineHelpText>Select the module that the submodule is part of</inlineHelpText>
    <label>Module</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Submodules</relationshipLabel>
    <relationshipName>ServiceMax_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>