All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/ModuleID__c.field-meta.xml
<CustomField>
    <fullName>ModuleID__c</fullName>
    <description>A unique Identification for each Module.</description>
    <inlineHelpText>A unique Identification for each Module.</inlineHelpText>
    <label>Module ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>