All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/MTTS_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MTTS_Minutes__c</fullName>
    <description>Internal use only</description>
    <label>MTTS Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>