All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Module/SubModule/Process Name.</description>
    <inlineHelpText>Enter a short name for this module, submodule or inventory process.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>