All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <label>Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>