All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Node_Parent__c.field-meta.xml
<CustomField>
    <fullName>Node_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Parent Node Object.</description>
    <inlineHelpText>Reference to Parent Node Object.</inlineHelpText>
    <label>Node Parent</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Node Parent)</relationshipLabel>
    <relationshipName>ServiceMax_Processes4</relationshipName>
    <type>Lookup</type>
</CustomField>