All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Node_Parent_API__c.field-meta.xml
<CustomField>
    <fullName>Node_Parent_API__c</fullName>
    <description>Parent object API Name.</description>
    <inlineHelpText>Parent object API Name.</inlineHelpText>
    <label>Node Parent API</label>
    <length>150</length>
    <type>Text</type>
</CustomField>