All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Node_Source_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Node_Source_Object_API__c</fullName>
    <description>Source object API Name.</description>
    <inlineHelpText>Source object API Name.</inlineHelpText>
    <label>Node Source Object API</label>
    <length>150</length>
    <type>Text</type>
</CustomField>