All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Normalized_Node_Type__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Node_Type__c</fullName>
    <description>Normalized Node Type Weight</description>
    <formula>Weight_Node_Type__c * 1</formula>
    <inlineHelpText>Normalized Node Type Weight</inlineHelpText>
    <label>Normalized Node Type Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>