All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Normalized_Route_Distance__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Route_Distance__c</fullName>
    <description>Normalized Route Distance Weight</description>
    <formula>Weight_Route_Distance__c * 100</formula>
    <inlineHelpText>Normalized Route Distance Weight</inlineHelpText>
    <label>Normalized Route Distance Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>