All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Normalized_Route_Time__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Route_Time__c</fullName>
    <description>Normalized Route Time Weight</description>
    <formula>Weight_Route_Time__c * 600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Normalized Route Time Weight</inlineHelpText>
    <label>Normalized Route Time Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>