All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Normalized_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Time_Window__c</fullName>
    <description>Normalized Time Window Weight</description>
    <formula>Weight_Time_Window__c * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Normalized Time Window Weight</inlineHelpText>
    <label>Normalized Time Window Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>