All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Notify_Technician__c.field-meta.xml
<CustomField>
    <fullName>Notify_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field enables the feature of notifying the technician on execution of associated service.</description>
    <label>Notify Technician</label>
    <type>Checkbox</type>
</CustomField>