All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Object_Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Object_Key_Prefix__c</fullName>
    <description>The three digit Salesforce key prefix for the object. Derived automatically</description>
    <inlineHelpText>The three digit Salesforce key prefix for the object. Derived automatically</inlineHelpText>
    <label>Object Key Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>