All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Open_As_Full_Window__c.field-meta.xml
<CustomField>
    <fullName>Open_As_Full_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open As Full Window</label>
    <type>Checkbox</type>
</CustomField>