All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Optimizer_Sync_Interval__c.field-meta.xml
<CustomField>
    <fullName>Optimizer_Sync_Interval__c</fullName>
    <description>Time interval to sync SF data with optimax server data</description>
    <label>Optimizer Sync Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>