All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Records</fullName>
            </value>
            <value>
                <fullName>User&apos;s Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>