All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to page definition for a process.</description>
    <inlineHelpText>Reference to page definition for a process.</inlineHelpText>
    <label>Page Layout</label>
    <referenceTo>Page_Layout__c</referenceTo>
    <relationshipLabel>ServiceMax Processes(Page Layout)</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>