All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Parent_Error_Msg2__c.field-meta.xml
<CustomField>
    <fullName>Parent_Error_Msg2__c</fullName>
    <description>Error message to be displayed when the header record does not match the second criteria.</description>
    <label>Parent Error Msg2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>