All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Object</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Parent Object)</relationshipLabel>
    <relationshipName>Parent_Object</relationshipName>
    <type>Lookup</type>
</CustomField>