All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Parent_Object_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Criteria__c</fullName>
    <description>WHERE clause of the parent selection criteria</description>
    <label>Parent Object Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>