All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Primary_Consolidation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Primary_Consolidation_Rule__c</fullName>
    <label>Primary Consolidation Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>