All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Process1__c.field-meta.xml
<CustomField>
    <fullName>Process1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shipment to RMA map to use when creating external RMA</description>
    <label>Process1</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Process1)</relationshipLabel>
    <relationshipName>ServiceMax_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>