All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Process2__c.field-meta.xml
<CustomField>
    <fullName>Process2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shipment Line to RMA Line map to use when creating external RMA</description>
    <label>Process2</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Process2)</relationshipLabel>
    <relationshipName>ServiceMax_Processes5</relationshipName>
    <type>Lookup</type>
</CustomField>