All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Process3__c.field-meta.xml
<CustomField>
    <fullName>Process3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process3</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Process3)</relationshipLabel>
    <relationshipName>ServiceMax_Processes6</relationshipName>
    <type>Lookup</type>
</CustomField>