All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Question Bank</description>
    <label>Question Bank</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>ServiceMax Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>