All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Resolve_Unexpected_SN_To_IB__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Unexpected_SN_To_IB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolve Unexpected SN To IB</label>
    <type>Checkbox</type>
</CustomField>