All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Retain_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Retain_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retain Appointment</label>
    <type>Checkbox</type>
</CustomField>