All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Select Rule Types..</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Order Parts</fullName>
            </value>
            <value>
                <fullName>MTTS</fullName>
            </value>
            <value>
                <fullName>Simple Assignment</fullName>
            </value>
            <value>
                <fullName>Priortization</fullName>
            </value>
            <value>
                <fullName>Counters</fullName>
            </value>
            <value>
                <fullName>Auto Entitlement</fullName>
            </value>
            <value>
                <fullName>Work Order Territory</fullName>
            </value>
            <value>
                <fullName>Named Expression</fullName>
            </value>
            <value>
                <fullName>FulFillment Path</fullName>
            </value>
            <value>
                <fullName>Custom View</fullName>
            </value>
            <value>
                <fullName>Auto Entitlement WO</fullName>
            </value>
            <value>
                <fullName>Column Info</fullName>
            </value>
            <value>
                <fullName>Tech Eligibility</fullName>
            </value>
            <value>
                <fullName>Skill Matching</fullName>
            </value>
            <value>
                <fullName>SRCH_CRITERIA</fullName>
            </value>
            <value>
                <fullName>Adv Criteria Exp</fullName>
            </value>
            <value>
                <fullName>Field Update Rule</fullName>
            </value>
            <value>
                <fullName>Checklist_QB</fullName>
            </value>
            <value>
                <fullName>Checklist_Section_Entry_Criteria</fullName>
            </value>
            <value>
                <fullName>Checklist_Section_Exit_Criteria</fullName>
            </value>
            <value>
                <fullName>Checklist Criteria in Output Doc</fullName>
            </value>
            <value>
                <fullName>Capacity Reservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>