All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Runs_Every_Monday__c.field-meta.xml
<CustomField>
    <fullName>Runs_Every_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Runs Every Monday</label>
    <type>Checkbox</type>
</CustomField>