All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Runs_Every_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Runs_Every_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Runs Every Thursday</label>
    <type>Checkbox</type>
</CustomField>