All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Search_Order__c.field-meta.xml
<CustomField>
    <fullName>Search_Order__c</fullName>
    <description>Field to define which configuration profile value will take preference if more than one configuration profiles are found for a setting.</description>
    <inlineHelpText>Field to define which configuration profile value will take preference if more than one configuration profiles are found for a setting.</inlineHelpText>
    <label>Search Order</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Setting_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Group,Global</fullName>
            </value>
            <value>
                <fullName>User,Group</fullName>
            </value>
            <value>
                <fullName>User,Group,Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>