All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Secondary_Consolidation_Rule_Case__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Consolidation_Rule_Case__c</fullName>
    <label>Secondary Consolidation Rule Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>