All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to bind check box in list of records on Visual force page with controller.</description>
    <inlineHelpText>Field to bind check box in list of records on Visual force page with controller.</inlineHelpText>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>