All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Service_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Method_Name__c</fullName>
    <label>Service Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>