All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Service_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Service_Namespace__c</fullName>
    <label>Service Namespace</label>
    <length>40</length>
    <type>Text</type>
</CustomField>