All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Service_Tracked_On__c.field-meta.xml
<CustomField>
    <fullName>Service_Tracked_On__c</fullName>
    <formula>IF(Source_Object_Name__c  = &apos;SVMXC__Service_Order__c&apos;,&apos;Work Order&apos;,IF(Source_Object_Name__c  = &apos;Case&apos;,&apos;Case&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Tracked On</label>
    <type>Text</type>
</CustomField>