All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>Setting_Type__c</fullName>
    <description>Setting Type: Global/Group or User</description>
    <inlineHelpText>Type of Setting</inlineHelpText>
    <label>Setting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>