All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Setting_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Setting_Unique_ID__c</fullName>
    <description>Unique ID of the setting across all modules. Derived by concatenating submodule ID and setting ID</description>
    <formula>Submodule__r.SubmoduleID__c  &amp; &quot;_&quot; &amp;  SettingID__c</formula>
    <inlineHelpText>Unique ID of the setting across all modules. Derived by concatenating submodule ID and setting ID</inlineHelpText>
    <label>Setting Unique ID</label>
    <type>Text</type>
</CustomField>