All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Settings_Name__c.field-meta.xml
<CustomField>
    <fullName>Settings_Name__c</fullName>
    <description>ServiceMax Settings name for a submodule.</description>
    <inlineHelpText>ServiceMax Settings name for a submodule.</inlineHelpText>
    <label>Settings Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>