All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Business_Hour_Source__c.field-meta.xml
<CustomField>
    <fullName>SM_Business_Hour_Source__c</fullName>
    <description>This will store the value of Source Business Hour.</description>
    <label>Business Hour Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>