All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Capacity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>SM_Capacity_Threshold__c</fullName>
    <label>Capacity Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>