All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Disable_AutoEntitlement__c.field-meta.xml
<CustomField>
    <fullName>SM_Disable_AutoEntitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores value of new configuration introduced on Auto Entitlement for providing an option to the customer to disable auto entitlement when multiple valid warranties/service contracts are available</description>
    <label>Disable AutoEntitlement</label>
    <type>Checkbox</type>
</CustomField>