All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Disable_Realtime_Validation__c.field-meta.xml
<CustomField>
    <fullName>SM_Disable_Realtime_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When unchecked, data validation rules will be evaluated in real-time, with messages displayed as changes are made. When checked, data validation rules will only be evaluated on Save. This setting is only applicable on ServiceMax Go.</description>
    <label>Disable Real-Time Validation</label>
    <type>Checkbox</type>
</CustomField>