All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Display_File_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Display_File_Name__c</fullName>
    <label>Display File Name</label>
    <type>TextArea</type>
</CustomField>