All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Do_Not_Create_New_WO__c.field-meta.xml
<CustomField>
    <fullName>SM_Do_Not_Create_New_WO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in condition based PM Plan to determine if the next WO to be created before the closure of previous one. If true, next WO will not be created until the previous one is closed.</description>
    <label>Do Not Create New WO</label>
    <type>Checkbox</type>
</CustomField>