All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Drive_Before_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>SM_Drive_Before_Shift_Start__c</fullName>
    <description>Before the shift begins, technicians should drive on their own time up to (in Minutes)</description>
    <inlineHelpText>Before the shift begins, technicians should drive on their own time up to (in Minutes)</inlineHelpText>
    <label>Drive time before shift start (in mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>