All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Enable_Image__c.field-meta.xml
<CustomField>
    <fullName>SM_Enable_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field uses to store the allow image value.</description>
    <label>Enable Image</label>
    <type>Checkbox</type>
</CustomField>