All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Exclude_Unanswered_Questions__c.field-meta.xml
<CustomField>
    <fullName>SM_Exclude_Unanswered_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Unanswered Questions</label>
    <type>Checkbox</type>
</CustomField>