All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Include_Object_Data_Set__c.field-meta.xml
<CustomField>
    <fullName>SM_Include_Object_Data_Set__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Object Data set</label>
    <type>Checkbox</type>
</CustomField>