All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Include_Skipped_Sections__c.field-meta.xml
<CustomField>
    <fullName>SM_Include_Skipped_Sections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Skipped Sections</label>
    <type>Checkbox</type>
</CustomField>