All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Process_Type__c</fullName>
    <description>Field to store process type value for PM process</description>
    <inlineHelpText>Field to store process type value for PM process</inlineHelpText>
    <label>Process Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>