All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Schema_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Schema_Name__c</fullName>
    <label>SchemaName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>