All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Section__c.field-meta.xml
<CustomField>
    <fullName>SM_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Page_Layout_Detail__c</referenceTo>
    <relationshipLabel>ServiceMax Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>