All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/SM_Target_Section__c.field-meta.xml
<CustomField>
    <fullName>SM_Target_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section2</label>
    <referenceTo>Page_Layout_Detail__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Section2)</relationshipLabel>
    <relationshipName>ServiceMax_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>