All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Source_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Name__c</fullName>
    <description>API Name of Source Object in Object Mapping</description>
    <inlineHelpText>API Name of Source Object in Object Mapping</inlineHelpText>
    <label>Source Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>