All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Internal use only</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>